<resources>
    <string name="app_name">Umak</string>
    <string name="txt_login">LOGIN</string>
    <string name="cd_footer">Footer</string>
    <string name="txt_password">Password</string>
    <string name="txt_username">Username</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="adamson_team">©Adamson Team</string>
    <string name="or">-- OR --</string>
    <string name="forgot_password">Reset Password?</string>
    <string name="title_activity_signup">Signup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bryle Sanico</string>
    <string name="nav_header_subtitle">astar8820@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="menu_adruino">Adruino</string>
    <string name="menu_account">Account Management</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_activity_home">Home</string>

    <string name="menu_home">Home</string>
    <string name="adruino">Adruino</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact">Contact #</string>
    <string name="address">Address</string>
</resources>