<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home"
            />
<!--        <item-->
<!--            android:id="@+id/nav_adruino"-->
<!--            android:icon="@drawable/baseline_device_hub_24"-->
<!--            android:title="@string/menu_adruino" />-->
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/account" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/logout" />
    </group>
</menu>