<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bryle_sanico.umak.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_adruino"
        android:name="com.bryle_sanico.umak.ui.adruino.AdruinoFragment"
        android:label="@string/menu_adruino"
        tools:layout="@layout/fragment_adruino" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.bryle_sanico.umak.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>