<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/activity_bg">

    <!-- Header -->
    <View
        android:id="@+id/imgParticle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@drawable/particle"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Main content -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="-120dp"
        app:layout_constraintEnd_toEndOf="@+id/imgParticle"
        app:layout_constraintStart_toStartOf="@+id/imgParticle"
        app:layout_constraintTop_toBottomOf="@+id/imgParticle">

        <View
            android:id="@+id/appLogo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:adjustViewBounds="true"
            android:background="@drawable/logo"
            android:scaleType="fitXY"
            tools:layout_editor_absoluteY="144dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imgFooter"
        app:layout_constraintEnd_toEndOf="@id/imgParticle"
        app:layout_constraintStart_toStartOf="@id/imgParticle"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <!-- First Name CardView -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp">

                <EditText
                    android:id="@+id/inputFname"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_remove_underline"
                    android:hint="@string/first_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>

            <!-- Last Name CardView -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp">

                <EditText
                    android:id="@+id/inputMname"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_remove_underline"
                    android:hint="@string/middle_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">


            <!-- Last Name CardView -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/lNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp">

                <EditText
                    android:id="@+id/inputLname"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_remove_underline"
                    android:hint="@string/last_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>

            <!-- Age CardView -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ageEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp">

                <EditText
                    android:id="@+id/inputAge"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_remove_underline"
                    android:hint="@string/age"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/primary_text"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


        <!-- Email CardView -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/contactEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/inputContact"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext_remove_underline"
                android:hint="@string/contact"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Email CardView -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp">

            <EditText
                android:id="@+id/inputAddress"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext_remove_underline"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>
        <!-- Email CardView -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext_remove_underline"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <!-- Password CardView -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext_remove_underline"
                android:hint="@string/txt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cpasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp">

            <EditText
                android:id="@+id/inputCPassword"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext_remove_underline"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            />
    </LinearLayout>



    <!-- Footer -->
    <View
        android:id="@+id/imgFooter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/footer"
        app:layout_constraintDimensionRatio="16:4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgParticle"
        app:layout_constraintStart_toStartOf="@+id/imgParticle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adamson_team"
        android:textColor="#F1F8E9"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgParticle"
        app:layout_constraintStart_toStartOf="@+id/imgParticle"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSignup"
        app:layout_constraintVertical_bias="0.894" />

</androidx.constraintlayout.widget.ConstraintLayout>
